--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -1,9 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank">【2019盘点】中共军事扩张 难挽危局</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1804260453522378-150x120.jpg" align ="left"></a>2019年中共军事领域动作频繁。在庞大的军费支撑下，首艘自制航母服役、北斗三号全球系统核心星座建成等，标志着中共军队武器装备系统和国防科工系统的持续扩张；两次大阅兵、军改后的首部国防白皮书、强化南海军事部署、升级对台军事威胁等等，将其全球野心暴露无遗；中俄军事合作提升，中美军事竞争加剧，而中共仍强硬拒绝参加中美俄三方军备控制谈判；“军改”进入“第三战役”，举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743457.md#1" target="_blank">【新闻看点】曾吁中共下台 北大教授再喊话</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310072319351528-150x120.jpg" align ="left"></a>今年的这个平安夜和圣诞节，北京又增加了一份痛苦。北京大学教授郑也夫22日在“纵览中国”发文，声明将向全国人大提出方案，让科级以上的官员在规定日期申报财产及受贿情况。并且要督促中共政治局的七大巨头带头公示，以自证清白、垂范官场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7f9b591118d116d264a3e33e71e838cc-150x120.jpg" align ="left"></a>蔡英文选情一年内大反转，有朋友调侃，这应该“感谢”北京当局的“鼎力相助”，如果不是北京“助选”，蔡英文取胜很难。台湾大选，北京为什么“助选”，又是如何助选的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741078.md#1" target="_blank">联合国遭举报配合中共 专家吁改善重视人权</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/393369-150x120.jpg" align ="left"></a>联合国一名内部举报人表示，联合国下属机构“人权事务高级专员办公室”，常年向中共提供参加联合国日内瓦会议的人权捍卫者名单。专家表示，联合国功能不彰要求改善，呼吁应重视中共迫害法轮功等中国人权议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank">【翻墙必看】北大教授：七常委先公示财产</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/130330204429941-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank">网传赖小民将百名情妇安置同一小区</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>已被起诉的“华融集团”前党委书记兼董事长赖小民的淫乱史继续被曝光。有知情人士再曝，赖小民曾为百名情妇在企业内安插职位，甚至将所有情妇都安置在同一社区，社区里的孩子都喊他“爸爸”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank">挑战叶德娴版桃姐角色 惠英红老态演技引负评</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/180111044705100615-150x120.jpg" align ="left"></a>演技精湛的香港艺人惠英红，最近在大陆综艺节目《我就是演员》中挑战叶德娴饰演的“桃姐”一角。虽然表演细腻，却被网民评论“不理想”、“总是差那么一点点”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189412679-600x400-1-150x120.jpg" align ="left"></a>这次习近平访问澳门，澳门当局神经紧绷，祭出了史无前例的安保，唯恐担心发生意外。不过安全上倒没什么意外，但是其它地方出现了不少意外。总的来说，有一大看点和三大真相，让北京的心“拔凉拔凉”的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:05 AM							</td></tr>
@@ -28,7 +23,11 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11737972.md#1" target="_blank">“难”“稳”——2019大陆汉字透中共困境</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11737972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912190911522188-150x120.jpg" align ="left"></a>网民票选出国内字“稳”、国际字“难”，分别代表中国面对的内外情势。这二字其实反映了中共所处的困境：求稳不得，难题无解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank">路透：中纪委多年前幕后推动引渡条例</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-150x120.jpg" align ="left"></a>港府修订《逃犯条例》（也称引渡条例），引爆“反送中”抗议活动。尽管林郑月娥坚称，她自己而非北京是修例的主要推动者。但路透社的调查披露了一个更为复杂的故事，中共中纪委早在多年前就在背后推动建立引渡法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank">【新闻看点】太空兵出世 美首创新兵种的背后</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737558.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e28a3eba7f0e2e_ttl7dayfm3_DSC09345-150x120.jpg" align ="left"></a>12月20日，川普签署国防法案，美国又创立了一个70年以来的新兵种。美国这个具有里程碑意义的历史动作，引起了各方的高度关注......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank">俞正声、俞强声亲属文革时被迫害死六七人</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fc0a04d04d9e0fb6aeb30304ca0976f7-150x120.jpg" align ="left"></a>中共间谍王立强投奔自由社会后，此前出逃美国的中共最大间谍俞强声再次受到外界关注。他家人在文革时曾遭到中共当局残酷迫害，母亲被关进监狱、妹妹被迫害致死等往事，再次被提起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank">控制核武 川普政府正式邀北京开始军备会谈</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737343.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1781184-1-150x120.jpg" align ="left"></a>美国川普（特朗普）政府周五（12月20日）表示，已正式邀请中国（中共）开启军备控制会谈。白宫希望，这是涵盖美国、俄罗斯和中国三方核武器协议的第一步。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank">马云卸任后 在湖北获“新职”</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/181212095028100484-150x120.jpg" align ="left"></a>马云卸任阿里巴巴董事局主席后，日前获得中共湖北省政府“经济顾问”的头衔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 12:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank">安全担忧 美海军限制使用抖音海外版</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8Y2-150x120.jpg" align ="left"></a>本周早些时候，美国海军禁止在政府提供的移动设备上使用抖音海外版TikTok，并称这个短视频应用会带来“网络安全威胁”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank">美防长：美在中东的行动不影响聚焦中俄</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N641W-150x120.jpg" align ="left"></a>美国国防部长马克·埃斯珀(Mark Esper) 周五（12月20日）表示，美军将继续集中精力应对中共和俄罗斯的安全挑战，不会因为中东和其他地区局势而分散注意力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742514.md#1" target="_blank">涉金融犯罪 122名中国人被尼泊尔警方逮捕</a><br></h3>12月24日，尼泊尔警方表示已逮捕了122名中国籍公民。中共外交部发言人耿爽在例行记者会上被问及此事时称，这些人涉嫌从事跨境网络诈骗活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11739502.md#1" target="_blank">【翻墙必看】90后女孩遭中共红三代老板强奸</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
@@ -41,5 +40,6 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11739024.md#1" target="_blank">传中共红三代涉持枪强奸下属 警方不调查</a><br></h3>父亲是河南一家大型央企的负责人，中学后赴美留学，归国后经引荐进入一家名为“美好世界航空集团”的公司，未想却遭遇一场恶梦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738146.md#1" target="_blank">江苏男子拎菜刀身藏美工刀闯法院 原因不明</a><br></h3>12月18日，江苏省淮安市洪泽区法院出现令人震惊一幕：男子潘某右手拎着一把菜刀、左手袖里藏着三把美工刀走进法院，其拒配合安检人员的检查，最终被制服。官媒报导未提及该男子提刀进法院的原因，引起质疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 4:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11737928.md#1" target="_blank">又一求救信 英女孩圣诞卡惊现上海囚犯信息</a><br></h3>圣诞节将至，一位英国女孩在乐购（Tesco）的慈善圣诞卡上发现一则求救信息，是来自上海青浦监狱里的一些外国囚犯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11736394.md#1" target="_blank">【翻墙必看】林郑丈夫对中共发出无声抗议的背后</a><br></h3>澳门主权移交20周年，19日晚在东亚运动会体育馆举行文艺晚会，香港特首林郑月娥同丈夫林兆波都有出席。现场播放《歌唱祖国》时，当全场高歌拍掌时，唯独林兆波木然站立不配合的一幕引发各界热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/ncid277_2.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid277_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/ncid277_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_2.htm">http://www.epochtimes.com/gb/ncid277_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
