--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -18,7 +18,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1134848462-150x120.jpg" align ="left"></a>来自官方的消息称，美国海关与边境保护局的官员于上周末挫败一起涉嫌偷渡案。他们在对一辆从圣伊西德罗入境口岸过境的搬家卡车进行检查时，发现11名中国人藏身于车上的家具里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11713237.md#1" target="_blank">大陆出现二例新H9N2流感病例</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11713237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/60930093350685-594x400-150x120.jpg" align ="left"></a>世界卫生组织（WHO）于12月4日公布，中国大陆日前通报了2例新增H9N2流感病例，为中国大陆此流行季（10月起）首2例新型A型流感病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 6:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11712915.md#1" target="_blank">“冰花男孩”家申请贫困户 村官：不够标准</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11712915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/52f1407874457f47d3fc4c67113c2cdc-150x120.jpg" align ="left"></a>云南高寒山区小学生王福满去年因一张“头顶冰霜”上学照走红后，备受外界关注。今年他父亲王刚奎表示，网民给的捐款都给了孩子学校用于改善教学设施，家中依旧贫困，想申请贫困户、给家人申请扫街道的岗位，均未被批准。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11723409.md#1" target="_blank">西安男子喝没煮熟豆浆致食物中毒</a><br></h3>陕西西安市民张先生经常会在公司附近一家早餐店吃早饭。12月13日，他喝了一碗豆浆后不久便开始头昏想吐、眼睛看不清东西，后来意识到可能是喝了没煮熟的豆浆导致食物中毒。有专家表示，生豆浆里含有植物红细胞凝集素、皂苷等成分，确实可能会引起中毒现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 1:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11712692.md#1" target="_blank">大陆影视业陷寒冬 今年有3228家公司消失</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/10/n11712692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111171140403-600x400-150x120.jpg" align ="left"></a>大陆影视产业正在遭遇寒冬，明星和演员也不得不“被迫冬眠”。陆媒披露，2019年以来共有超过3228家影视的公司消失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722193.md#1" target="_blank">每日三退声明精选（2019/12/13）</a><br></h3>在youtube上看到了共党迫害善良的人，使我感到愤怒，可又无能为力。我小时加入过少先队员，现今知晓善恶自愿退出少先队。虽然我的举动微不足道，希望可以在退党、退团、退队的人数中加上我一个。永远支持真善忍，愿所有人早日知道真相，并脱离魔鬼的掌控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/13/n11720497.md#1" target="_blank">山东一男子持刀伤人 致2死1伤</a><br></h3>12月11日晚山东济宁发生一起持刀伤人案件，3名受害者中2人身亡，另外1人受伤，嫌疑人逃离现场后畏罪自杀，被送往医院抢救。经初查，嫌疑人与其中1名受害者有感情纠纷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 3:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/13/n11719825.md#1" target="_blank">每日三退声明精选（2019/12/12）</a><br></h3>自从今年年初我出国时偶然观看了由神韵艺术团表演的多姿多彩的中华传统舞蹈节目后，我的心态有了大幅度的转变，如果这样的中华文化传承是共产党口中的邪教，那么共产党自己又能是什么呢？后来我回国后又翻墙阅读了《九评共产党》的文章，字字句句都深刻揭示了共产党本质，给了我极大的震撼，让我深刻的意识到共产党对我们真正中国传统文化的残害是多么的严重，我现在身在邪党阵营中，只能.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:32 AM							</td></tr>
