--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-505204462-320x200.jpg">红色资金介入大选 台查获最大两岸地下汇兑</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750767.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/F-5N_VFC-111_NAS_Key_West-320x200.jpg">擅闯美海军基地禁区拍照 中国男子被捕</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737119.md#1">大陆江湖为何“底朝天” 专家揭秘（上）</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/21/n11737305.md#1">马云卸任后 在湖北获“新职”</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741034.md#1">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/22/n11738852.md#1">圣诞卡求救信发酵 乐购暂停从中国进货</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750943.md#1">吴惠林：再谈2019年诺贝尔经济学奖</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750697.md#1">袁斌：“细颈瓶”成敏感词 折射中共末日心态</a><br>
@@ -31,6 +31,7 @@
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750592.md#1">【翻墙必看】中共到了最后解体的时刻？</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台查获最大两岸地下汇兑</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751269.md#1">贪污逾千万元 内蒙古通辽政协高官获刑17年</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播预告】2020元旦游行 民阵：毋忘承诺</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751027.md#1">程晓容：法制人权黑暗年 2019的中国故事</a><br>
@@ -41,15 +42,14 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750919.md#1">民调：林郑评分较去年同期大跌30分</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750751.md#1">中共批台大开民主倒车 学者讥中国有民主？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750541.md#1">中国外债达到2万亿美元 创新高</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750404.md#1">日大型钢企“日本制铁”计划关闭大陆工厂</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751072.md#1">为保经济增长 中共明年或增发10%地方债</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747235.md#1">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751131.md#1">山东警察跨省抓捕 丁家喜等人下落不明</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750889.md#1">被指垄断 丰田汽车被中共罚款8761万</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750404.md#1">日大型钢企“日本制铁”计划关闭大陆工厂</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750070.md#1">中国年轻人债台高筑 为何中共最不乐见</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750707.md#1">传习近平不满北京官方 中南海收回规划权</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750767.md#1">擅闯美海军基地禁区拍照 中国男子被捕</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750581.md#1">【拍案惊奇】香港水源是否完全依赖大陆？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750395.md#1">贸易战暂休战 美中经济关系仍会部分脱钩</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750093.md#1">小苹果为醒醒唱生日歌 章子怡汪峰赞美妙动听</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,776,202 人
+- 共 348,786,403 人
 ```
 </strong>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
